fixed profile visibility text

--- a/public/css/usersProfile/personalInformation.css
+++ b/public/css/usersProfile/personalInformation.css
@@ -2266,7 +2266,7 @@ font-weight:600;
 }
 
 .profileVisibilityComponent button{
-    margin-left:440px;
+    margin-left:300px;
 }
 .activityVisibilityComponent button {
     margin-left:10px;
